# AgentFlow-with-DSPy-Auto-Optimization

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: config.py
src/agents/: dspy_web_agent.py  web_agent.py
src/experiments/: experiment_runner.py
src/mcp_client/: client.py
src/mcp_server/: web_server.py
src/optimization/: evaluator.py  metrics.py  optimizer.py
src/utils/: logger.py  mlflow_utils.py
